organization details added to dashboard

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,4 +1,8 @@
 @import "./pages/layout/index.scss";
 @import "./partials/variables";
 @import "./common/general.scss";
+@import "./common/loader.scss";
 @import "./pages/authPages/index.scss";
+
+@import "./pages/dashboard/";
+
