--- a/src/styles/common/general.scss
+++ b/src/styles/common/general.scss
@@ -7,6 +7,7 @@
     border-radius: 5px;
     width: calc(100% - 20px);
     margin: 10px;
-    overflow: auto;
-    height: calc(100vh - 80px);
+    height: calc(100% - 80px);
+    overflow-y: auto;
 }
+
