--- a/src/styles/pages/dashboard/dashboard.scss
+++ b/src/styles/pages/dashboard/dashboard.scss
@@ -1,23 +1,36 @@
-
 @import "../../partials/variables";
 
 .dashboard-container {
-    height: 97%;
-    width: 98%;
-    padding: 1%;
+  height: calc(100%);
+  width: calc(100% - 12px);
 }
 
 .insight-card {
-    min-height: 80px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-  
-    .content {
-        font-size: 34px;
-        height: inherit;
-        font-weight: 600    ;
-        color: $secondary-color;
-    }
+  min-height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  .content {
+    font-size: 34px;
+    height: inherit;
+    font-weight: 600;
+    color: $secondary-color;
+  }
+}
+
+.head-container {
+  display: flex;
+  width: 100%;
+  height: 40px;
+  justify-content: space-between;
+  align-items: center;
+
+  input {
+    border: none;
+    outline: none;
+    border-bottom: 2px solid $emphasis;
+    margin-right: 10px;
+  }
 }
