--- a/src/styles/common/general.scss
+++ b/src/styles/common/general.scss
@@ -20,3 +20,18 @@
         cursor: pointer;
     }
 }
+
+
+.no-data {
+    width: 100%;
+    height: inherit;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    img {
+        height: 200px;
+        width: 200px;
+    }
+}
