org details, filters, agents, info in tab view

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,6 +3,6 @@
 @import "./common/general.scss";
 @import "./common/loader.scss";
 @import "./pages/authPages/index.scss";
-
+@import "./pages/organization/";
 @import "./pages/dashboard/";
 
