--- a/src/styles/pages/dashboard/dashboard.scss
+++ b/src/styles/pages/dashboard/dashboard.scss
@@ -30,6 +30,7 @@
   .searchText {
     border: none;
     outline: none;
+    height: 25px;
     border-bottom: 2px solid $emphasis;
     margin-right: 10px;
   }
